--- a/package.json
+++ b/package.json
@@ -5,15 +5,18 @@
   "main": "server.js",
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "connect-session-sequelize": "^7.0.4",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-handlebars": "^5.3.2",
+    "express-session": "^1.17.1",
     "handlebars": "^4.7.7",
     "mysql": "^2.18.1",
     "mysql2": "^2.2.5",
     "seed": "^0.4.4",
     "seeds": "^2.3.1",
-    "sequelize": "^6.6.2"
+    "sequelize": "^6.6.2",
+    "underscore": "^1.13.1"
   },
   "devDependencies": {},
   "scripts": {
