--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-handlebars": "^5.3.2",
+    "express-session": "^1.17.2",
     "handlebars": "^4.7.7",
     "mysql": "^2.18.1",
     "mysql2": "^2.2.5",
