--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "npm run seed && node server.js",
+    "seed": "node seeds/index.js"
   },
   "author": "",
   "license": "ISC"
